--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,91 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+header {
+  background-color: #454257;
+  color: white;
+}
+h1 {
+  /* background-color: #454257; */
+  font-weight: bold;
+  font-size: 2rem;
 }
 
+.header-nav {
+  background-color: #454257;
+  width: 80%;
+  margin: 2% auto 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 2%;
+}
 
+.header-dateinput {
+  border-radius: 5px;
+  margin: 3px 0 3px 50%;
+  outline-color: blueviolet;
+  outline-offset: 5;
+  cursor: pointer;
+}
+
+.date {
+  font-size: 1.6rem;
+  margin: 2% auto 0 auto;
+  font-style: italic;
+  font-weight: 600;
+}
+
+.image-container {
+  margin: 2% auto 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  max-width: 70%;
+}
+
+.image-container>a {
+  margin: 2% auto 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  max-width: 80%;
+}
+
+img {
+  width: 100%;
+}
+
+.header-nav-a {
+  background-color: #454257;
+  color: white;
+  border: 0 none;
+  border-bottom: 4px solid  #454257;
+  border-radius: 5px 5px 0 0;
+  padding: 5px 5px 3px 5px;
+  transition: 300ms;
+}
+
+.header-nav-a:hover {
+  border-bottom: 4px solid blueviolet;
+  cursor: pointer;
+}
+
+.prev-button, .next-button {
+  width: 3rem;
+  font-size: 1.2rem;
+  padding: 10px;
+  border-color: white;
+  border-radius: 25%;
+  transition: 300ms;
+}
+
+.prev-button:hover, .next-button:hover {
+  color: blueviolet;
+  border: 2px solid blueviolet;
+  cursor: pointer;
+}
